<resources>
    <string name="locale">pl</string>
    <string name="app_name">Licznik kalorii</string>
    <string name="tab_dish">Dzisiaj</string>
    <string name="tab_calendar">Historia</string>
    <string name="tab_dishlist">Lista</string>
    <string name="tab_calc">Sieci</string>
    <string name="tab_setting">Info</string>
    <string name="tab_mode">Opcji</string>
    <string name="tab_statistic">Statystyka</string>
    <string name="tab_about">Od autora</string>
    <string name="add_today_dish">Dodaj danie</string>
    <string name="edit_today_dish">Edytuj danie</string>
    <string name="add_dish">Dodaj danie</string>
    <string name="edit_dish">Edytuj danie</string>
    <string name="about_header">Autor</string>
    <string name="tab_calendar_header">Moj kalendarz</string>
    <string name="Meat">Miesa, ryb, jaj, rosliny straczkowych</string>
    <string name="Diery">Produkty mleczne</string>
    <string name="Sweet">Tluszcze i slodycze</string>
    <string name="Fruit">Owoce i warzywa</string>
    <string name="Bakery">Chleb, platki zbozowe, makaron, ziemniaki</string>
    <string name="loading">Poszukiwanie...</string>
    <string name="loading_base">Zainstalowac baze produktow...</string>
    <string name="update_base">Aktualizacja produktow...</string>
    <string name="bad_search">Nic nie znaleziono:(</string>
    <string name="idealCheet">Idealny bilans</string>
    <string name="yourCheet">Wasz bilans</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="dish_list">Lista potraw</string>
    <string name="avg_label">Srednie dzienne spozycie kalorii:</string>
    <string name="parameters_header">Wprowadz  twoj parametry</string>
    <string name="total">Suma:</string>
    <string name="limit">Limit:</string>
    <string name="dish_name">Miano</string>
    <string name="name">Nazwa:</string>
    <string name="indicator">Efekt</string>
    <string name="portion_size">Waga dozy (w gramach):</string>
    <string name="fitnes_time">Czas zajecia  (w minutach) :</string>
    <string name="kcal_day">Kcal/dzien</string>
    <string name="caloricity">Wartosc energetyczna (kcal/100 g):</string>
    <string name="date">Data</string>
    <string name="information">Informacji</string>
    <string name="gram">g</string>
    <string name="gram_full">gram</string>
    <string name="santimetr">centymetr</string>
    <string name="kcal">kcal</string>
    <string name="maintain">Dla utrzymanja  wagi:</string>
    <string name="losing">Dla straty wagi:</string>
    <string name="age">Wiek</string>
    <string name="age_colon">Wiek:</string>
    <string name="sex">Plec</string>
    <string name="weight">Waga (kg)</string>
    <string name="weight_fitnes">Wasza waga (kg)</string>
    <string name="high">Wzrost (cent)</string>
    <string name="weight_colon">Wasza waga (kg):</string>
    <string name="high_colon">Wzrost (cent):</string>
    <string name="activity">Poziom aktywnosci</string>
    <string name="amoutnt_of_calory">Ilosc kalorii</string>
    <string name="amoutnt_of_burn_calory">Spalone kalorie</string>
    <string name="dialog_ok">OK</string>
    <string name="remove_dialog">Czy to jest na pewno?</string>
    <string name="save_prove">Opcje zostaly przechowany</string>
    <string name="welcome">Witamy Was w Liczniku kalorii! Ten program pozwala obliczyc optymalna dzienna dawka kalorii i codziennej diety . Prosze, Wprowadz  swoi opcje</string>
    <string name="tip">. Prosze, po pierwsze, swoi opcje i kliknicje na  przycisk OK na dole strony</string>
    <string name="culculated_parameters">Wprowadz wartosci</string>
    <string name="qutstion">Czego brakuje ci w zalaczniku?</string>
    <string name="statistics_parameters">Statystyka</string>
    <string name="target_settings:">Wybor rezymu pracy:</string>
    <string name="mode">Rezym odzywianie:</string>
    <string name="underweight">Waga ponizej normy</string>
    <string name="normal_weight">Masa jest prawidlowa</string>
    <string name="overweight">Zbytna waga</string>
    <string name="obese">Otluszczenie</string>
    <string name="losing_weight">Utrata wagi</string>
    <string name="keeping_weight">Utrzymanie wagi</string>
    <string name="gaining_weight">Nabieranie wagi</string>
    <string name="empty_list_label">Nacisnijcie tu zeby zaczac wypelnienie...</string>
    <string name="total_caloricity">Konsumpcja:</string>
    <string name="total_weight">Waga pokarmu:</string>
    <string name="level_1">Siedzacy sposob zycia</string>
    <string name="level_2">Uprawianie sportu 1-3 razy do tygodnia</string>
    <string name="level_3">Uprawianie sportu 3-5 razy do tygodnia</string>
    <string name="level_4">Uprawianie sportu 5-7 razy do tygodnia</string>
    <string name="level_5">Bardzo duzy codzienny wysilek fizyczny</string>
    <string name="male">Mezczyzna</string>
    <string name="female">Kobieta</string>
    <string name="calorie_day">kalorii/dzien</string>
    <string name="search_in_all">Poszukiwanie potrawy... </string>
    <string name="disonect">Nie ma internet laczenia</string>
    <string name="today_fitnes">Aktywnosc</string>
    <string name="edit_today_fitnes">Zmienic aktywnosc</string>
    <string name="body_weight">Wasza waga:</string>
    <string name="kgram">kg</string>
    <string name="tab_social_header">Wspolnota</string>
    <string name="tab_social_calendar_header">Historia</string>
    <string name="search_parameters_title">Parametry poszukiwania</string>
    <string name="any">dowolny</string>
    <string name="any_midle">dowolny</string>
    <string name="user_weight">Waga:</string>
    <string name="loading_social">Idzie ladowanie...</string>
    <string name="time">Czas:</string>
    <string name="time_breakfast">Sniadanie</string>
    <string name="time_branch">Pozne sniadanie</string>
    <string name="time_dinner">Obiad</string>
    <string name="time_lanch">Podwieczorek</string>
    <string name="time_supper">Kolacja</string>
    <string name="time_active">Dzienna aktywnosc</string>
    <string name="header_in_label">Otrzymano:</string>
    <string name="header_out_label">Zuzyto:</string>
    <string name="username_label">Wprowadzcie Wasz pseudonim:</string>
    <string name="username">Imie uzytkownika:</string>
    <string name="first_name">Imie</string>
    <string name="username_hello_label">Tu potraficie obserwowac za trybem odzywiania drugich ludzi i byc moze znajdziecie druhow po diecie. Po to, zeby Was mogli widziec drudzy uzytkownicy wprowadzcie swoje imie czy pseudonim.</string>
    <string name="username_dialog_title">Rejestracja uzytkownika</string>
    <string name="username_change_dialog_title">Zmiana imienia</string>
    <string name="change_weight_dialog_title">Przemiana wagi</string>
    <string name="change_weight_label">Tu mozecie odnowic potoczne dane o Waszej wadze.</string>
    <string name="update_weight_label">Tu mozecie zmienić dane o Waszej wadze za konkretny dzien.</string>
    <string name="username_dialog_registred">Jestescie zarejestrowane</string>
    <string name="username_dialog_notregistred">Stala sie usterka, sprobujcie pozniej</string>
    <string name="contacts_list">Spis kontaktow</string>
    <string name="newContactMessage">Nowy kontakt jest ustalony</string>
    <string name="enter_message">Wprowadzcie zawiadomienie</string>
    <string name="sport_level">Sportowy</string>
    <string name="conversation">Obcowanie</string>
    <string name="user_history">Historia uzytkownika</string>
    <string name="user_weight_history">Popatrzec grafik przemiany wagi</string>
    <string name="user_new_messages_label">Nowyje zawiadomien:</string>
    <string name="users_notfound">Uzytkownikow z takimi parametrami nie znaleziono, nacisnijcie tu zeby zmienic parametry poszukiwania</string>
    <string name="statistic_food">Spozywczy bilans</string>
    <string name="statistic_other">Drugie</string>
    <string name="statistic_weight">Statystyka przemiany wagi</string>
    <string name="statistic_FCP">Bilans W.T.W.</string>
    <string name="statistic_weight_empty">Waga jeszcze nie zmieniala sie</string>
    <string name="users_calendar_empty">Kalendarz uzytkownika jest pusty</string>
    <string name="user_chart_dialog">Grafik przemiany wagi</string>
    <string name="contacts_header">Nacisnijcie tu zeby uzupelnic spis</string>
    <string name="new_message">Nowych zawiadomien</string>
    <string name="balance_norm">Normalny sposob zycia</string>
    <string name="balance_fith">Przy duzych wysilkach fizycznych</string>
    <string name="balance_clever">Dla pracownikow umyslowej pracy</string>
    <string name="fitnes_burn_label">Spala kalorii do godziny (kcal/godzine):</string>
    <string name="fitnes_list">Cwiczenia</string>
    <string name="fat">Tlusz.</string>
    <string name="carbon">Wegl.</string>
    <string name="protein">Biał.</string>
    <string name="energy">En. wart.</string>
    <string name="reset_dialog">Chcecie wydalic cala historie i zaczac wszystko na nowo?</string>
    <string name="remove_chat_dialog">Chcecie wydalic cala korespondencje z tym uzytkownikiem?</string>
    <string name="empty_day">Pusty dzien</string>
    <string name="balanse_data">Wasz bilans obliczony wedlug danych za ostatnie 30 dni..</string>
    <string name="consumption">Kcal/godzine</string>
    <string name="add_fitnes">Dodac aktywnosc</string>
    <string name="add_today_fitnes">Dodac aktywnosc</string>
    <string name="days">Historia</string>
    <string name="templates">Szablony</string>
    <string name="save">Zachowac jak</string>
    <string name="load">Zaladowac szablon</string>
    <string name="savetemplate">Szablon jest zachowany</string>
    <string name="loadtemplate">Szablon jest dociazony</string>
    <string name="loadtemplateempty">Zaladowywany szablon jest pusty</string>
    <string name="templatesempty">U was jeszcze nie ma szablonow</string>
    <string name="template_download">Potoczne dane beda utracone. Wy zgodne zaladowac szablon?</string>
    <string name="template_save">Mozecie zachowac potoczne dane jak szablon i wykorzystac jego nadal.</string>
    <string name="template_name">Wprowadzcie imie szablonu</string>
    <string name="tab_template_header">Szablony</string>
    <string name="new_template_header">Szablon</string>
    <string name="changename">Zmienic imie</string>
    <string name="choosetemplate">"-- Wybierzcie szablon --"</string>
    <string name="type_save">Mozecie dodac swoja kategorie. Uwaznie wprowadzacie imie kategorii, redagowac jego potem nie wolno.</string>
    <string name="types">Kategorija</string>
    <string name="type_name">Wprowadzcie imie kategorii</string>
    <string name="reminder">Dawno nie wypelnialiscie licznik kalorii</string>
    <string name="reminder_title">Upomnienie</string>
    <string name="newmessage">Nowe zawiadomienie w Liczniku Kalorii!</string>
    <string name="newmessage_title">Nowe zawiadomienie</string>
    <string name="timeHHMM">Czas(s:ch) </string>
    <string name="timeHHMMFitnes">Czas poczatku:</string>
    <string name="category">W kategorie:</string>
    <string name="type">Typ:</string>
    <string name="russian">Rosyjski</string>
    <string name="bulgarian">Bulgarski</string>
    <string name="polish">Polski</string>
    <string name="english">English</string>
    <string name="belarusian">Беларуская</string>
    <string name="water_label">Woda:</string>
    <string name="widjet_prot">B:</string>
    <string name="widjet_carb">W:</string>
    <string name="widjet_fat">T:</string>
    <string name="statistic_export_save">Zapisz historię?</string>
    <string name="statistic_export">Zapisz historię</string>
    <string name="statistic_import">Import</string>
    <string name="saved_history">Historia zachowana</string>
    <string name="history_download">Potoczne dane beda utracone. Wy zgodne zaladowac historię?</string>
    <string name="empty_dish_search">Nacisnijcie tu zeby dodaj danie...</string>
</resources>